# tufty2040-dev

./: CMakeCache.txt  CMakeLists.txt  load.sh  main.cpp
img/: garre.h
src/: badge.hpp  balls.cpp  common.hpp  menu.cpp  menu.hpp
src/img/: selflove.h
src/util/: jpeg.cpp  jpeg.hpp
